try fix height on mobiles

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -61,7 +61,7 @@
 } 
 
 mat-sidenav {
-  background: radial-gradient(circle at 0% 100%, $primary 10%, #000000 70%);
+  background-color: radial-gradient(circle at 0% 100%, $primary 10%, #000000 70%);
 }
 
 /* router pages will fill available space and scroll internally */
