--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,8 +9,10 @@
 }
 
 html, body {
-  height: 100%;
-  height: -webkit-fill-available;
+  min-height: 100vh;
+  min-height: -moz-available;
+  min-height: -webkit-fill-available;
+  min-height: fill-available;
 }
 
 html {
